--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 30px;
-    position: fixed;
+    position: static;
     bottom: 0;
     left: 0;
     width: 100%;
