--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,3 +1,19 @@
+.mission p,
+.vision p {
+    font-size: x-large;
+    font-weight: 500;
+    text-align: left;
+    padding-left: 8%;
+}
+
+.mission h1,
+.vision h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    text-align: left;
+    padding-left: 6%;
+}
+
 .members {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -10,6 +26,10 @@
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 150px;
+}
+
+.team {
+    margin-top: 100px;
 }
 
 .member {
