--- a/src/components/plans/Plans.css
+++ b/src/components/plans/Plans.css
@@ -1,10 +1,8 @@
-.height {
-    height: 400px;
-}
+.planCard {
 
-.homeCard {
     padding-top: 50px;
     padding-bottom: 50px;
     padding-left: 8%;
     justify-content: center;
+
 }
