--- a/src/components/shop/Product.css
+++ b/src/components/shop/Product.css
@@ -11,3 +11,11 @@
     height: 200px;
     width: auto;
 }
+
+.shopCard {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 20%;
+    padding-right: 20%;
+    justify-content: center;
+}
