--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,3 +1,25 @@
+.homeBody {
+    background-image: url('./bgr.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+}
+
+.heading {
+    font-size: 2.5em;
+    font-weight: 700;
+}
+
+.txt {
+    font-size: xx-large;
+    font-weight: 500;
+}
+
+.animate__animated.animate__zoomInDown {
+    --animate-duration: 1.5s;
+}
+
 .height {
     height: 400px;
 }
@@ -9,6 +31,6 @@
     justify-content: center;
 }
 
-.animate__animated.animate__zoomInDown {
-    --animate-duration: 1.5s;
+.cardbghome {
+    background-color: rgba(245, 179, 179, 0.342);
 }
