--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -6,7 +6,7 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
-.txt {
+.txtnav {
     text-decoration: none;
     color: black;
     font-weight: 500;
