--- a/src/components/plans/Plans.css
+++ b/src/components/plans/Plans.css
@@ -1,3 +1,11 @@
+.plansbg {
+    background-image: url('./bgp.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+}
+
 .planCard {
 
     padding-top: 50px;
@@ -5,4 +13,8 @@
     padding-left: 8%;
     justify-content: center;
 
+}
+
+.plansbgcard {
+    background-color: rgba(245, 179, 179, 0.342);
 }
