--- a/src/components/shop/Product.css
+++ b/src/components/shop/Product.css
@@ -1,3 +1,11 @@
+.shopbg {
+    background-image: url('./bgs.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+}
+
 .horizontal {
     display: flex;
     justify-content: space-between;
@@ -18,4 +26,8 @@
     padding-left: 20%;
     padding-right: 20%;
     justify-content: center;
+}
+
+.productbgcard {
+    background-color: rgba(248, 229, 229, 0.342);
 }
